fix overflowing filter bar in datatable, and reduce table title font size

--- a/MerlionPortal/MerlionPortal-war/web/mrp/viewallproducts.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/viewallproducts.xhtml
@@ -48,6 +48,7 @@
                 <p:dataTable id="products" var="product" sortMode="multiple" value="#{productViewEditManagedBean.myCompanyProducts}" editable="true" style="margin-bottom:20px"
                              widgetVar="productsTable"
                              emptyMessage="No product found"
+                             resizableColumns="true"
                              rowKey="#{product.productId}">
 
                     <f:facet name="header">
@@ -61,25 +62,25 @@
                     <p:ajax event="rowEditCancel" listener="#{productViewEditManagedBean.onRowCancel}" update=":form:msgs" />
 
 
-                    <p:column filterBy="#{product.productId}" filterMatchMode="exact" headerText="Product ID">
+                    <p:column filterBy="#{product.productId}" filterStyle="width: 70px" width="65px" filterMatchMode="exact" headerText="Product ID">
                         <h:outputText value="#{product.productId}" />
                     </p:column>
 
-                    <p:column filterBy="#{product.productName}" filterMatchMode="contains" headerText="Product Name">
+                    <p:column filterBy="#{product.productName}" filterStyle="width: 70px" filterMatchMode="contains" headerText="Product Name">
                         <p:cellEditor>
                             <f:facet name="output"><h:outputText value="#{product.productName}" /></f:facet>
                             <f:facet name="input"><p:inputText value="#{product.productName}" style="width:100%" label="Product Name"/></f:facet>
                         </p:cellEditor>
                     </p:column>
 
-                    <p:column filterBy="#{product.description}" filterMatchMode="contains" headerText="Product Description">
+                    <p:column filterBy="#{product.description}" filterStyle="width: 70px" filterMatchMode="contains" headerText="Product Description">
                         <p:cellEditor>
                             <f:facet name="output"><h:outputText value="#{product.description}" /></f:facet>
                             <f:facet name="input"><p:inputText value="#{product.description}" style="width:100%" label="Product Description"/></f:facet>
                         </p:cellEditor>
                     </p:column>
 
-                    <p:column filterBy="#{product.category}" filterMatchMode="contains" headerText="Product Category">
+                    <p:column filterBy="#{product.category}" filterStyle="width: 70px" filterMatchMode="contains" headerText="Product Category">
                         <p:cellEditor>
                             <f:facet name="output"><h:outputText value="#{product.category}" /></f:facet>
                             <f:facet name="input">
@@ -90,7 +91,7 @@
                         </p:cellEditor>
                     </p:column> 
 
-                    <p:column filterBy="#{product.productType}" filterMatchMode="contains" headerText="Product Type">
+                    <p:column filterBy="#{product.productType}" filterStyle="width: 70px" filterMatchMode="contains" headerText="Product Type">
                         <p:cellEditor>
                             <f:facet name="output"><h:outputText value="#{product.productType}" /></f:facet>
                             <f:facet name="input">
@@ -102,7 +103,7 @@
                     </p:column>
 
 
-                    <p:column filterBy="#{product.currency}" filterMatchMode="contains" headerText="Product Currency">
+                    <p:column filterBy="#{product.currency}" filterStyle="width: 70px" filterMatchMode="contains" headerText="Product Currency">
                         <p:cellEditor>
                             <f:facet name="output"><h:outputText value="#{product.currency}" /></f:facet>
                             <f:facet name="input">
@@ -115,7 +116,7 @@
                     </p:column> 
 
 
-                    <p:column filterBy="#{product.price}" filterMatchMode="contains" headerText="Product Price">
+                    <p:column filterBy="#{product.price}" filterStyle="width: 70px" filterMatchMode="contains" headerText="Product Price">
                         <p:cellEditor>
                             <f:facet name="output"><h:outputText value="#{product.price}" /></f:facet>
                             <f:facet name="input"><p:inputText value="#{product.price}" style="width:100%" label="Product Price"/></f:facet>
