--- a/MerlionPortal/MerlionPortal-war/web/oes/viewallrequests.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/viewallrequests.xhtml
@@ -24,7 +24,7 @@
 
             <h:form id="formMain">
                 <p:panelMenu>
-                    <p:submenu label="Home" styleClass="display:block">
+                  <p:submenu label="Home" styleClass="display:block">
                         <p:menuitem value="OES Home" url="oesindexpage.xhtml" />
                     </p:submenu>
                     <p:submenu label="Product" styleClass="display:block">
@@ -35,19 +35,29 @@
                         <p:menuitem value="View All Request" url="viewallrequests.xhtml" />
                         <p:menuitem value="View Quotation" url="displayallquotations.xhtml" />
                     </p:submenu>
+                    <c:if test="#{dashboardBean.checkOESCanGeneratePO()||dashboardBean.checkOESCanGenerateSO() ||dashboardBean.loginedUser.userType == 'superuser'}">
+                        <p:submenu label="Orders" styleClass="display:block">
+                            <c:if test="#{dashboardBean.checkOESCanGeneratePO()|| dashboardBean.loginedUser.userType == 'superuser'}">
+                                <p:menuitem value="Create Order" url="pogeneration.xhtml" />
+                                <p:menuitem value="Retrieve Saved Order" url="retrievesavedorder.xhtml" />
+                            </c:if>
+                            <c:if test="#{dashboardBean.checkOESCanGeneratePO()||dashboardBean.checkOESCanGenerateSO() ||dashboardBean.loginedUser.userType == 'superuser'}">
+                                <p:menuitem value="All Purcahse Order" url="viewallpo.xhtml" /> 
+                                <p:menuitem value="Order Status" url="displayallso.xhtml" />
+                            </c:if>
+                        </p:submenu>
+                    </c:if>
 
-                    <p:submenu label="Orders" styleClass="display:block">
-                        <p:menuitem value="Create Order" url="pogeneration.xhtml" />
-                        <p:menuitem value="Retrieve Saved Order" url="retrievesavedorder.xhtml" />
-                        <p:menuitem value="All Purcahse Order" url="viewallpo.xhtml" />   
-                        <p:menuitem value="Order Status" url="displayallso.xhtml" />
-                    </p:submenu>
-                    <p:submenu label="Make Pyament" styleClass="display:block">
-                        <p:menuitem value="All unapid Orders" url="makepayment.xhtml" />
-                    </p:submenu>
-                    <p:submenu label="Reports" styleClass="display:block">
-                        <p:menuitem value="Sales Reports" url="#" />
-                    </p:submenu>
+                    <c:if test="#{dashboardBean.checkOESCanGeneratePO()||dashboardBean.loginedUser.userType == 'superuser'}">
+                        <p:submenu label="Make Pyament" styleClass="display:block">
+                            <p:menuitem value="All unapid Orders" url="makepayment.xhtml" />
+                        </p:submenu>
+                    </c:if>
+                    <c:if test="#{dashboardBean.checkOESCanGenerateSalesReport()||dashboardBean.loginedUser.userType == 'superuser'}">
+                        <p:submenu label="Reports" styleClass="display:block">
+                            <p:menuitem value="Sales Reports" url="#" />
+                        </p:submenu>
+                    </c:if>
 
                 </p:panelMenu>
             </h:form>
@@ -77,7 +87,7 @@
                     <f:param name="pageId" value="1" />
                 </p:commandButton>   
                 <br></br>
-          
+
                 <c:if test="#{quotationManagedBean.checkUserGenerateQuotation()}">
                     <br></br>
                     <p:commandButton action="#{quotationManagedBean.editQuotation()}" value="Generate Quotation">
