--- a/MerlionPortal/MerlionPortal-war/web/oes/oesindexpage.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/oesindexpage.xhtml
@@ -64,6 +64,7 @@
         </ui:define>
 
         <ui:define name="right">
+                <div class="system-banner oes-system-banner"></div>
 
             <h3 style="margin-top:0">Order Entry System </h3>
             <p:scrollPanel style="width:500px;height:400px">
