--- a/MerlionPortal/MerlionPortal-war/web/oes/oesindexpage.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/oesindexpage.xhtml
@@ -64,21 +64,29 @@
         </ui:define>
 
         <ui:define name="right">
-                <div class="system-banner oes-system-banner"></div>
+            <div class="system-banner oes-system-banner"></div>
 
-            <h3 style="margin-top:0">Order Entry System </h3>
-            <p:scrollPanel style="width:500px;height:400px">
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean blandit tortor a ipsum vehicula, in semper sapien auctor. Nulla tempor eget est non consequat. Nulla sit amet lorem justo. Cras non tellus eros. Sed ultricies orci ut quam interdum fringilla. Nam vitae massa ac mi elementum mattis vel vitae sem. Ut eros ipsum, scelerisque a erat a, eleifend luctus nibh. Interdum et malesuada fames ac ante ipsum primis in faucibus.
-                </p>
-                <p>
-                    Vivamus ac ullamcorper magna. Aenean felis ante, elementum sit amet urna at, eleifend aliquet velit. Morbi a convallis magna. In nec leo vel dolor hendrerit pharetra. Cras in iaculis enim. Aenean porta sapien dignissim turpis dapibus, eu dictum velit elementum. Aliquam sollicitudin gravida luctus.
-                </p>
-                <p>
-                    Ut vel nulla sit amet erat laoreet eleifend nec sed lacus. Quisque placerat diam vitae justo eleifend, rutrum mollis mauris fringilla. Curabitur turpis odio, euismod id lorem a, ultricies suscipit ligula. Pellentesque ut erat a leo rhoncus porta ac sed velit. Nunc at erat ligula. Fusce vehicula posuere interdum. Curabitur tempus, tortor at sollicitudin dapibus, erat ante varius nisl, id dictum erat ipsum porttitor ipsum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nulla id varius enim, sed rutrum orci.
-                </p>
+            <h2 class="system-welcome">Welcome to Order Entry System!</h2>
 
-            </p:scrollPanel>
+
+            <div class="system-welcome">
+                Order Entry System (OES) automate your order processing and operations tasks, increase the efficiency and accuracy when managing your order lifecycle.<br></br>
+            </div>
+            <div class="system-description">
+                Benefits of OES:<br></br>
+                <br></br>
+                1. Capture orders from business and individual consumers.<br></br>
+                2. Highly integrated with WMS, MRP and TMS to better support sales process.<br></br>
+                3. Provide customer self-service functionalities (Eg. Track and record order statuses)<br></br>
+                4. Consolidate information to facilitate MRP to do production planning.<br></br>
+                5. Handle financial process such as generate invoice based on sales order and handle customer payment.<br></br>
+                6. Consolidating all sales order information<br></br>
+                7. Generate report for analysis<br></br>
+
+
+                <Br/><Br/>
+
+            </div>
 
         </ui:define>
     </ui:composition>
