--- a/MerlionPortal/MerlionPortal-war/web/wms/wmsindex.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/wmsindex.xhtml
@@ -20,7 +20,7 @@
         </ui:define>
 
         <ui:define name="left">
-                <p:menu>
+                <p:panelMenu>
                     <p:submenu label =" Manage Your Warehouse">
                         <p:menuitem value="WMS" url="wmsindex.xhtml" />
                         <p:submenu label="Warehouse" >
@@ -36,7 +36,7 @@
                             <p:menuitem value="View Storage Bin" url="viewstoragebin.xhtml" />
                         </p:submenu>
                     </p:submenu>
-                </p:menu>
+                </p:panelMenu>
         </ui:define>
 
         <ui:define name="right">
