change WMS to panelMenu to standadize with other systems

--- a/MerlionPortal/MerlionPortal-war/web/wms/viewstoragetype.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/viewstoragetype.xhtml
@@ -21,7 +21,7 @@
         </ui:define>
 
         <ui:define name="left">
-            <p:menu>
+            <p:panelMenu>
                 <p:submenu label =" Manage Your Warehouse">
                     <p:menuitem value="WMS" url="wmsindex.xhtml" />
                     <p:submenu label="Warehouse" >
@@ -37,7 +37,7 @@
                         <p:menuitem value="View Storage Bin" url="viewstoragebin.xhtml" />
                     </p:submenu>
                 </p:submenu>
-            </p:menu>
+            </p:panelMenu>
         </ui:define>
 
 
