--- a/MerlionPortal/MerlionPortal-war/web/wms/viewallwarehouse.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/viewallwarehouse.xhtml
@@ -22,8 +22,7 @@
 
         <ui:define name="left">
 
-
-            <p:menu>
+            <p:panelMenu>
                 <p:submenu label =" Manage Your Warehouse">
                     <p:menuitem value="WMS" url="wmsindex.xhtml" />
                     <p:submenu label="Warehouse" >
@@ -39,7 +38,7 @@
                         <p:menuitem value="View Storage Bin" url="viewstoragebin.xhtml" />
                     </p:submenu>
                 </p:submenu>
-            </p:menu>
+            </p:panelMenu>
         </ui:define>
         <ui:define name="right">
             <h:form id="formMain">
