--- a/MerlionPortal/MerlionPortal-war/web/services.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/services.xhtml
@@ -92,7 +92,7 @@
                                     <span class="badge alert-blue"><font size="+1" class="min-horizontal-width">TMS</font></span>                               
                                     <span class="badge alert-danger"><font size="+1" class="min-horizontal-width">GRNS</font></span>                               
                                 </div>
-                                <h4 class="service-cost">6,000/yr</h4>
+                                <h4 class="service-cost">$6,000/yr</h4>
                                 <button class="btn btn-success" id="4plBuyBtn" onclick="toggleModal();">Buy Now</button>
                             </div>
                         </div>
