contact us updated

--- a/MerlionPortal/MerlionPortal-war/web/aboutus.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/aboutus.xhtml
@@ -15,6 +15,27 @@
         <!-- Override Content -->
         <ui:define name="content">
             <div class="container">
+                                    <div class="col-md-4">
+                        <div class="thumbnail">
+                            <img src="img/service_crms.jpg" class="service-image" />
+                            <div class="caption product-box">
+                                <h2 class="service-title">Contact Us</h2><br></br>
+                                <div class="product-des-wi">
+                                    <h4 class="service-des">IS3102 Team ES12<br /><br />
+
+                                        Li Du Julietta: A0085617X<br></br><br></br>
+                                            Wang Yuanbo   : A0091832E<br></br><br></br>
+                                            Lim Yun Wei   : A0083119H<br></br><br></br>
+                                            Qi Manli      : A0084692A<br></br><br></br>
+                                            lI Xiameng    : A0084444A<br></br><br></br>
+                                            Fu Yao        : A0083580A<br></br><br></br>
+                                            Wen Xin       : A0083602M<br></br><br></br>
+                                        </h4>
+                                   
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 <h2>About  Merlion Portal</h2>
                 <h4>Our Mission</h4>
                 <div>To provide professional service and smoothen your business process</div>
