updated about us page

--- a/MerlionPortal/MerlionPortal-war/web/aboutus.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/aboutus.xhtml
@@ -15,33 +15,49 @@
         <!-- Override Content -->
         <ui:define name="content">
             <div class="container">
-                                    <div class="col-md-4">
-                        <div class="thumbnail">
-                            <img src="img/service_crms.jpg" class="service-image" />
-                            <div class="caption product-box">
-                                <h2 class="service-title">Contact Us</h2><br></br>
-                                <div class="product-des-wi">
-                                    <h4 class="service-des">IS3102 Team ES12<br /><br />
+                <div class="col-md-4">
+                    <div class="thumbnail">
+                        <img src="img/aboutus.jpg" class="service-image" />
+                        <div class="caption product-box">
+                            <h2 class="service-title">Contact Us</h2><br></br>
+                            <div class="product-des-wi">
+                                <h4 class="service-des">Kent Ridge Technology (KRT)<br /><br /><br />
 
-                                        Li Du Julietta: A0085617X<br></br><br></br>
-                                            Wang Yuanbo   : A0091832E<br></br><br></br>
-                                            Lim Yun Wei   : A0083119H<br></br><br></br>
-                                            Qi Manli      : A0084692A<br></br><br></br>
-                                            lI Xiameng    : A0084444A<br></br><br></br>
-                                            Fu Yao        : A0083580A<br></br><br></br>
-                                            Wen Xin       : A0083602M<br></br><br></br>
-                                        </h4>
-                                   
-                                </div>
+                                    Li Du Julietta: A0085617X<br></br><br></br>
+                                    Wang Yuanbo   : A0091832E<br></br><br></br>
+                                    Lim Yun Wei   : A0083119H<br></br><br></br>
+                                    Qi Manli      : A0084692A<br></br><br></br>
+                                    lI Xiameng    : A0084444A<br></br><br></br>
+                                    Fu Yao        : A0083580A<br></br><br></br>
+                                    Wen Xin       : A0083602M<br></br><br></br>
+                                </h4>
+
                             </div>
                         </div>
                     </div>
+                </div>
                 <h2>About  Merlion Portal</h2>
-                <h4>Our Mission</h4>
-                <div>To provide professional service and smoothen your business process</div>
-                <h4>Our Vission</h4>
-                <div>Be the world leader in logistic services, you need it, we provide it!</div>
-                <div>MerLION provides you with all the logistic services you need!</div>
+                <h3>What we do:</h3>
+                <div>Being one of the most preferred regional or global operating base for many major logistics firms, Singapore has proved itself to be a global logistic hub. 20 out of 25 global logistics players conduct their operations here. The tremendous growth of international trade over the past few years due to globalization has opened up a huge demand for logistics and supply chain services. Singapore’s strategic location in the heart of Southeast Asia and at the intersection of major shipping lanes has created an increase in demand for logistics services provided in Singapore.
+                    Merlion Investment Holdings, one of Singapore’s largest private equity firms, had decided to invest S$5 billion to establish Merlion Logistics, a 5PL logistics provider.
+                    As part of its business preparation, Merlion Logistics has decided to develop a custom 5PL management platform, the MerLION Platform. This Platform is expected to handle all logistics, supply chain and transport operations of Merlion Logistics and its partner.
+                    In order to provide an integrated suite of outsourced logistics services for 1PLs to 4PLs, we propose a MerLION Platform, which offers the following key functions:</div>
+                <h3>What Merlion does:</h3>
+                <div>
+                   Customer Relationship Management System (CRMS)<br></br><br></br>
+                        Order Entry System (OES)<br></br><br></br>
+                        Manufacturing Resource PLanning System (MRP II)<br></br><br></br>
+                        Warehouse Management System (WMS)<br></br><br></br>
+                        Transportation Management System (TMS)<br></br><br></br>
+                        Global Rates Negotiation System (GRNS)<br></br><br></br></div>
+                <div>
+                    <h3>
+                        Who are we:
+                    </h3>
+                    <div>
+                        Kent Ridge Technology (KRT) is an established IT consulting company recognized for its excellent track record in developing IT Systems. Our staffs are highly skilled in both designing and delivering high quality IT solutions. We are confident and pleased to undertake the task of developing MerLION Platform to assist Merlion Logistics to become a world-class logistics service provider.
+                    </div>
+                    </div>
             </div>
         </ui:define>
 
