--- a/MerlionPortal/MerlionPortal-war/web/tms/addnewtasset.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/addnewtasset.xhtml
@@ -21,8 +21,7 @@
         
 
         <ui:define name="left">
-
-                    <p:menu>
+                    <p:panelMenu>
                         <p:submenu label =" Manage Your Transportation">
                             <p:menuitem value="TMS Home" url="tmsindex.xhtml" />
                             <p:submenu label="Location" >
@@ -35,7 +34,7 @@
                             </p:submenu>
  
                         </p:submenu>
-                    </p:menu>
+                    </p:panelMenu>
         </ui:define>
         
          <ui:define name="right">       
