--- a/MerlionPortal/MerlionPortal-war/web/mrp/forecastgetperiodicity.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/forecastgetperiodicity.xhtml
@@ -23,28 +23,31 @@
 
         <ui:define name="left">
 
-           <p:panelMenu>
-                <p:menuitem value="MRP II" url="mrp.xhtml" />
-                <p:submenu label="Product Management">
-
-                    <p:submenu label="Product Catalog Management">
-                        <p:menuitem value="Add New Product" url="addnewproduct.xhtml" />
-                        <p:menuitem value="View, Edit and Delete" url="viewallproducts.xhtml" />
+            <p:panelMenu>
+                    <p:submenu label="HOME" styleClass="display:block">
+                        <p:menuitem value="MRP II Home" url="mrp.xhtml" />
                     </p:submenu>
-                    <p:submenu label="BOM Management">
-                        <p:menuitem value="Add a New Component" url="addnewcomponent.xhtml" />
-                        <p:menuitem value="View, Edit and Delete BOM" url="viewbom.xhtml" />
-                    </p:submenu>
+                    <c:if test="#{dashboardBean.checkMRPCanManageProductComponent() || dashboardBean.loginedUser.userType == 'superuser'}">
+                        <p:submenu label="Product Management" styleClass="display:block">
+                            <p:submenu label="Product Catalog Management">
+                                <p:menuitem value="Add New Product" url="addnewproduct.xhtml" />
+                                <p:menuitem value="View, Edit and Delete" url="viewallproducts.xhtml" />
+                            </p:submenu>
+                            <p:submenu label="BOM Management">
+                                <p:menuitem value="Add a New Component" url="addnewcomponent.xhtml" />
+                                <p:menuitem value="View, Edit and Delete BOM" url="viewbom.xhtml" />
+                            </p:submenu>
+                        </p:submenu>
+                    </c:if>
+                    <c:if test="#{dashboardBean.checkMRPCanManageUseForecast() || dashboardBean.loginedUser.userType == 'superuser'}">
+                        <p:submenu label="Material Requirement Planning" styleClass="display:block">
+                            <p:submenu label="Forecasting">
+                                <p:menuitem value="Forecasting" url="forecast.xhtml" />
+                            </p:submenu>
+                        </p:submenu>
+                    </c:if>
 
-                </p:submenu>
-                <p:submenu label="Material Requirement Planning">
-
-                    <p:submenu label="Forecasting">
-                        <p:menuitem value="Forecasting" url="forecast.xhtml" />
-                    </p:submenu>
-
-                </p:submenu>
-            </p:panelMenu>
+                </p:panelMenu>
 
         </ui:define>
 
