reset password- Manli

--- a/MerlionPortal/MerlionPortal-war/web/resetpassword.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/resetpassword.xhtml
@@ -14,28 +14,6 @@
         <!-- Override Content -->
         <ui:define name="content">
             <h:form>
-                <script type="text/javascript">
-                    $(document).ready(function() {
-                        $(".btnResetEmail").click(function() {
-                            load();
-                        });
-                    });
-                    function success() {
-                        $.notify("Password Reset Success!", "success");
-                        $("#loadingImg").addClass("hide");
-                        $(".btnResetEmail").removeAttr("disabled");
-                    }
-                    function fail(errMsg) {
-                        $.notify("Password Reset Fail! " + errMsg, "error");
-                        $("#loadingImg").addClass("hide");
-                        $(".btnResetEmail").removeAttr("disabled");
-                    }
-                    function load() {
-                        $(".btnResetEmail").attr("disabled", "disabled");
-                        $("#loadingImg").removeClass("hide");
-                    }
-
-                </script>
                 <div class="container">
                     <div class="row">
                         <div class="col-md-10">
@@ -58,8 +36,10 @@
                         </div>
                         <div class="col-md-8">
                             <div class="pull-right">
+                                <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true"/>
+
                                 <h:commandButton styleClass="btn btn-success btnResetEmail" actionListener="#{resetPasswordBean.requestPasswordChange}" value="Reset Password">
-                                    <f:ajax execute="@form" />
+
                                 </h:commandButton>
                             </div>
                         </div>
